# terraqura

./: .dockerignore  .gitignore  .mailmap  CONTRIBUTING.md  Dockerfile  INVESTOR_SUMMARY.md  LICENSE  README.md  SECURITY.md  SECURITY_ASSESSMENT_REPORT.md  codecov.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml
apps/analytics/: README.md  pyproject.toml
apps/analytics/src/terraqura_analytics/: __init__.py  config.py  main.py  schemas.py
apps/analytics/src/terraqura_analytics/api/: app.py  routes.py
apps/analytics/src/terraqura_analytics/models/: __init__.py  anomaly_detection.py  carbon_price.py  impact.py
apps/analytics/src/terraqura_analytics/services/: __init__.py  analytics_service.py  risk_service.py
apps/analytics/tests/: conftest.py  test_anomaly_detection.py  test_api.py  test_carbon_price.py  test_impact.py  test_risk.py
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/contracts/: .eslintrc.json  .solcover.js  .solhint.json  BRANCH_GAP_ANALYSIS.md  QUICK_WINS_TESTS.ts  coverage.json  defender.config.ts  hardhat.config.ts  package.json  tsconfig.json
apps/docs/: docusaurus.config.ts  package.json  sidebars.ts
apps/indexer/: go.mod  go.sum
apps/verifier/: Cargo.toml
apps/verifier/src/: config.rs  crypto.rs  error.rs  handlers.rs  lib.rs  main.rs  merkle.rs  provenance.rs  sensor.rs  types.rs  verification.rs
apps/verifier/tests/: crypto_tests.rs  merkle_tests.rs  provenance_tests.rs  sensor_tests.rs  verification_tests.rs
docs/: DISASTER_RECOVERY.md  GAS_OPTIMIZATION_REVIEW.md  README.md
docs/api/: README.md
patches/: @graphprotocol__graph-cli@0.67.4.patch
(+356 files in other folders)
