[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraqura-analytics"
version = "0.1.0"
description = "Analytics and ML service for the TerraQura carbon credit platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow running",
]

[tool.hatch.build.targets.wheel]
packages = ["src/terraqura_analytics"]
