[package]
name = "terraqura-verifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance verification engine for the TerraQura carbon credit platform on the Aethelred sovereign EVM blockchain"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
